--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row">
             <!--inicio-->
             <div class="col-md-6 mb-2">
-                    <a href="file:///C:/Users/Elom/Documents/HTML/Check%20List/semma/Licenciamentoambientalrural.html" target="_black" class="text-decoration-none"> 
+                    <a href="https://github.com/Elloy123/Semma1/blob/main/Licenciamentoambientalrural.html"_black" class="text-decoration-none"> 
                     <button style="text-align: center;" class=" btn btn-outline-dark btn-block btn-lg"><i class="fas fa-search" aria-hidden="true"></i>
                         Licençiamento de Atividades Rural
                     </button>
