--- a/Licenciamentoambientalrural.html
+++ b/Licenciamentoambientalrural.html
@@ -18,14 +18,14 @@
                 </div>
         
         <div class="col-md-6 mb-2">
-                    <a href="/" target="_black" class="text-decoration-none"> 
+                    <a href="https://docs.google.com/document/d/1jAPcHZpMVd7k0i3RLV0DD6U-Hz19MUmM/edit?usp=sharing&ouid=106601439338908171942&rtpof=true&sd=true" target="_black" class="text-decoration-none"> 
                     <button style="text-align: center;" class=" btn btn-outline-dark btn-block btn-lg"><i class="fas fa-search" aria-hidden="true"></i>
                     Requerimento padrão
                     </button>
                     </a>
         </div>
         <div class="col-md-6 mb-2">
-                <a href="/" target="_blank" class="text-decoration-none">
+                <a href="https://docs.google.com/document/d/1mmazM2Mn_jXWIoZe7bfhUn2yONJuataN/edit?usp=sharing&ouid=106601439338908171942&rtpof=true&sd=true" target="_blank" class="text-decoration-none">
                 <button style="text-align: center;" class=" btn btn-outline-dark btn-block btn-lg"><i class="fas fa-search" aria-hidden="true"></i>
                 Dia 
                 </button>
