--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </a>
             </div>
             <div class="col-md-6 mb-2">
-                    <a href="/" target="_blank" class="text-decoration-none">
+                    <a href="#" target="_blank" class="text-decoration-none">
                     <button style="text-align: center;" class=" btn btn-outline-dark btn-block btn-lg"><i class="fas fa-search" aria-hidden="true"></i>
                        Licença Prévia-LP
                     </button>
